<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/registerbkgrnd"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        tools:context=".LoginActivitySecPage">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Foodie"
            android:textStyle="bold"
            android:textSize="40dp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:textColor="#006400"/>


        <TextView
            android:id="@+id/full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="35dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/Full_Name"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/full_name_text"
            android:layout_width="284dp"
            android:layout_height="49dp"
            android:layout_margin="10dp"
            android:layout_marginStart="30dp"
            android:inputType="text"
            android:text="\n\n"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="82dp"
            tools:layout_editor_absoluteY="172dp" />

        <TextView
            android:id="@+id/email_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"
            android:text="@string/Email_Id"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email_id_text"
            android:layout_width="284dp"
            android:layout_height="49dp"
            android:layout_margin="10dp"
            android:inputType="text"
            android:text="\n\n"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="82dp"
            tools:layout_editor_absoluteY="172dp" />

        <TextView
            android:id="@+id/phn_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:inputType="number"
            android:text="@string/Phone_No"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/phn_no_text"
            android:layout_width="284dp"
            android:layout_height="49dp"
            android:layout_margin="10dp"
            android:inputType="textEmailAddress"
            android:text="\n\n"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="82dp"
            tools:layout_editor_absoluteY="172dp" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/Address"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/address_text"
            android:layout_width="284dp"
            android:layout_height="49dp"
            android:layout_margin="10dp"
            android:inputType="text"
            android:text="\n\n"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="82dp"
            tools:layout_editor_absoluteY="172dp" />

        <TextView
            android:id="@+id/pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:inputType="number"
            android:text="@string/Pin_Code"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/pin_text"
            android:layout_width="284dp"
            android:layout_height="49dp"
            android:layout_margin="10dp"
            android:inputType="text"
            android:text="\n\n"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="82dp"
            tools:layout_editor_absoluteY="172dp" />


        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="#006400"
            android:text="@string/Register"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>